@@ -41,6 +41,7 @@ Other contributors, listed alphabetically, are:
 * Nate Bogdanowicz <natezb@gmail.com>
 * Peter Grayson <jpgrayson@gmail.com>
 * Richard Barnes <rbarnes@umn.edu>
+* Robert Booth <rob@ishigoya.com>
 * Ryan Dwyer <ryanpdwyer@gmail.com>
 * Ryan Kingsbury <RyanSKingsbury@alumni.unc.edu>
 * Ryan May
