@@ -11,6 +11,8 @@ Pint Changelog
   (Issue #1308)
 - Fix babel format for `Unit`.
   (Issue #1085)
+- Fix handling of positional max/min arguments in clip function.
+  (Issue #1244)
 
 ### Breaking Changes
 
